consolidated into single file

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,11 +53,11 @@
 }
 
 
-.chart-section {
+/*.chart-section {
   width: 1200px;
   height: 700px;
   border: .5px solid gray;
-}
+}*/
 
 
 .main {
