--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,6 +83,10 @@ h4 {
   margin-left: 20px;
 }
 
+.about-content {
+  width: 90%;
+  margin: 10px 40px 0 40px;
+}
 
 /**
  * (C)Leanest CSS spinner ever
