--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 920px) {
+  .hidden-small {
+    display: none;
+  }
+}
+
 #header.home-header {
   min-height: 50px;
   background-color: black;
