--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,3 @@
-@media only screen and (max-width: 920px) {
-  .hidden-small {
-    display: none;
-  }
-}
-
 #header.home-header {
   min-height: 50px;
   background-color: black;
@@ -77,7 +71,6 @@ h4 {
 .chart-section:not(.about) {
   width: 99%;
   margin-left: 5px;
-  height: 670px;
   border: .5px solid gray;
   text-align: center;
 }
@@ -156,4 +149,13 @@ h4 {
 .progress > div:after {
 	transform: rotate(-135deg);
 	background: #bbb;
+}
+
+@media only screen and (max-width: 920px) {
+  .hidden-small {
+    display: none;
+  }
+  .tab {
+    font-size: 10px;
+  }
 }
