--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,6 +155,10 @@ h4 {
 	background: #bbb;
 }
 
+#api_selector .input {
+  margin-right: 30px !important;
+}
+
 @media only screen and (max-width: 920px) {
   .hidden-small {
     display: none;
